<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:minWidth="@dimen/box_min_width"
        android:minHeight="@dimen/box_min_height"
        android:hint="@string/editTextHintName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editTextEmail"
        tools:ignore="TextContrastCheck"
        android:autofillHints="none" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:minWidth="@dimen/box_min_width"
        android:minHeight="@dimen/box_min_height"
        android:hint="@string/editTextHintEmail"
        app:layout_constraintTop_toBottomOf="@id/editTextName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/editTextUsername"
        tools:ignore="TextContrastCheck"
        android:autofillHints="none" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:minWidth="@dimen/box_min_width"
        android:minHeight="@dimen/box_min_height"
        android:hint="@string/editTextHintUsername"
        app:layout_constraintTop_toBottomOf="@id/editTextEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/buttonBirthday"
        tools:ignore="TextContrastCheck"
        android:autofillHints="none" />

    <Button
        android:id="@+id/buttonBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/box_min_width"
        android:minHeight="@dimen/box_min_height"
        android:onClick="openDatePicker"
        android:text="@string/buttonBirthday"
        app:layout_constraintBottom_toTopOf="@id/buttonSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/editTextUsername" />

    <Button
        android:id="@+id/buttonSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="@dimen/box_min_width"
        android:minHeight="@dimen/box_min_height"
        android:onClick="onSubmit"
        android:text="@string/buttonSubmit"
        app:layout_constraintBottom_toTopOf="@id/textViewAuthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/buttonBirthday" />

    <TextView
        android:id="@+id/textViewAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textViewAuthor"
        app:layout_constraintTop_toBottomOf="@id/buttonSubmit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>